Commiting before deleting comments.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <!-- <div class="text-box-cursor"></div> -->
             <input type="text" class="player-text-box">
         </div>
+        <div class="shop-keep-items">
+            <div>Hello adventurer! Peruse my goods!</div>
+        </div>
     </div>
     <div class=character-stats> 
         <div class="title">
