Starting encounter code

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="stylesheet" type="text/css" href="/style.css" /> 
+    <script src="/script/gameObjects.js"></script>
     <script src="/script/main.js"></script>
 </head>
 
@@ -36,11 +37,14 @@
         <div class="gold">
             Gold: 50
         </div>
-        <div class="Armor">
+        <div class="armor">
             Armor: Light
         </div>
-        <div class="Weapon">
+        <div class="weapon">
             Weapon: Battleaxe
+        </div>
+        <div class="other">
+            Other:
         </div>
     </div>
 </div>
