Initial game working

--- a/index.html
+++ b/index.html
@@ -26,25 +26,36 @@
             Character Sheet
         </div>
         <div class="username">
-            Name: 
+            Name: <span class="value"></span>
         </div>
         <div class="level">
             Level: 1
         </div>
         <div class="health">
-            HP: 20
+            HP: <span class="value"></span>
         </div>
         <div class="gold">
-            Gold: 50
+            Gold: <span class="value"></span>
         </div>
         <div class="armor">
-            Armor: Light
+            Armor: <span class="value"></span>
         </div>
         <div class="weapon">
-            Weapon: Battleaxe
+            Weapon: <span class="value"></span>
         </div>
         <div class="other">
-            Other:
+            Other: <span class="value"></span>
+        </div>
+    </div>
+    <div class="monster-stats">
+        <div class="title">
+            Monster: <span class="value"></span>
+        </div>
+        <div class="name">
+            Name: <span class="value"></span>
+        </div>
+        <div class="health">
+            HP: <span class="value"></span>
         </div>
     </div>
 </div>
